@@ -23,6 +23,7 @@ Revision 0.2.8, released XX-XX-2019
   service names in certificates
 - Added RFC5924 providing Extended Key Usage for Session Initiation
   Protocol (SIP) in X.509 certificates
+- Added RFC5916 providing Device Owner Attribute
 
 Revision 0.2.7, released 09-10-2019
 -----------------------------------
